# core-et-erbium

./: .gitignore  .pre-commit-config.yaml  .svlint.toml  CHANGELOG.md  COPYRIGHT.md  LICENSE  Makefile  NOTICE  README.md  pyproject.toml
.github/workflows/: dv.yaml
doc/: Makefile  aon.md  bringup.md  chipid.md  chiplet_io_discussion.drawio  clint.md  coverage.md  cpu_mm.md  cpu_subsystem.md  datasheet.md  delivery.md  drawing.drawio  dv_master_plan.md  gpio.md  handshake.md  i2c.md  index.md  interconnect.md  interrupts.md  minion.md  mram.md  powerdomains.md  prcm.md  qspi.md  registers.md  reset.md  sccr.md  serve_http.py  sfpd.md  signals.md  simulation.md  tracking.md  uart.md  verification.md  xspi.md  xspi_mm.md
erbium_digital/verilog/: aon_ctrl.v  (+6 more)
ip/uart/: Makefile  change.md  pyproject.toml  refactor.md
ip/uart/bsv/: Makefile  RS232_modified.bsv  uart.bsv  uart_axi.bsv  uart_cfg_regs.bsv  uart_wrapper.bsv
ip/uart/doc/: Makefile
ip/uart/systemrdl/: Makefile  uart.rdl
ip/uart/tb/: Makefile  env.py  tb_uart.v  test_uart.py
ip/uart/tb/ai/: test_uart_suite.py
ip/uart/verilog/: uart.v
qc/: Makefile  cdc.tcl  lint.tcl  lint_waiver.tcl  rdc.tcl
scripts/: junit2html.py  select_riscv_tools.sh
shakti_ip/: Makefile
tb/: Makefile  README.md  common.mk  env.py  erbium_tb_vcs.f  qspi_ext.py  run_boot.sh  run_test.sh  tb.v  test_bootrom.py  test_default.py  test_elf.py  test_gpio.py  test_gpio_1.py  test_i2c.py  test_i2c_regress.py  test_interrupt.py  test_memory_map.py  test_mram_features.py  test_qspi.py  test_uart.py  test_watchdog.py  test_xspi.py
(+438 files in other folders)
